* add dimnames in +ascii.table()+
* +style+, +align+ and +valign+ accept matrix
* +t/b/l/rgroup+ accept several groups (in a list)
* +header+ and +footer+ accept an integer (number of lines for the header)
* +t/b/l/rstyle+ can be "h" (for "header")
* +caption+, +caption.level+, +align+, +valign+, +style+, +frame+, +grid+ have +NULL+ default value

2010/02/05
~~~~~~~~~~

* textile support
* fix a bug in asciidoc labeled list, when labels begin with a number
* fix bug with RweaveDrivers when split = TRUE

2009/11/28
~~~~~~~~~~

* method for +survfit+ and +summary.survfit+ objects
* fix bug in +ascii.CrossTable+ when no test result
* fix extra spaces in org output when style = "s" or "m"

2009/11/25
~~~~~~~~~~

* fix several bugs in +ascii.freqtable+ and +ascii.meanscomp+
* fix several bugs in asciidoc table header

2009/11/24
~~~~~~~~~~

* version 0.4
* remove extra +\n+ when there is no R output
* change the name of Sphinx related functions to ReST
* add methods for +freq()+, +compmeans()+ and +CrossTable()+ in package +descr+
* remove +cgroup+ and +rgroup+ arguments in +ascii()+ function
* four new arguments : +tgroup+ (top), +bgroup+ (bottom), +lgroup+ (left) and +rgroup+ (right)
* new arguments +escape+ and +list.escape+ in +print.ascii()+ function

2009/10/28
~~~~~~~~~~

* "results=ascii" for all drivers
* method for +ftable+ objects
* method for +packageDescription+ objects
* method for +sessionInfo+ objects
* fix warning with asciidoc list output

2009/10/24
~~~~~~~~~~

* small bug fix

2009/10/24
~~~~~~~~~~

* version 0.3
* +list.type+ can be +"label"+
* +ascii.simple.list+ method
* +rownames+ and +colnames+ arguments
* +cgroup+ for txt2tags output
* improve col alignment in txt2tags output
* http://sphinx.pocoo.org/[sphinx] driver and output
* http://orgmode.org/[org] driver and output
* improve row and col span (cgroup and rgroup)
* remove +SweaveAscii()+ function
* +Asciidoc()+, +T2t()+, +Sphinx()+ and +Org()+ (wrapper for +Sweave("file.Rnw", RweaveXxx)+)
